# Windows-Memory-Forensics-MCP

./: .gitignore  AGENT_RULES.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mcp.json.example  pyproject.toml  requirements.txt  setup.ps1  verify_setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: __init__.py  basic_analysis.py  malware_detection.py  quickstart.py  staged_payload.py
src/: __init__.py  memory_forensics_mcp.py
